@@ -1,5 +1,6 @@
 2010-12-01  Robby Stephenson  <robby@periapsis.org>
 
+	* Fixed bug with FreeDB results not using track artists (Bug 258541).
 	* Fixed bug with importing Bibtex file with keyword and keywords fields (Bug 258269);
 
 2010-11-23  Robby Stephenson  <robby@periapsis.org>
